@@ -122,6 +122,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - LSL2                   William Fry
 - Lua                    Roberto Rossi
 - m86k                   Benny Baumann
+- MagikSF                Sjoerd van Leent
 - MapBasic               Tomasz Berus
 - mIRC                   Alberto de Areba Sánchez
 - Modula-3               Martin Bishop
